# LivePokerOPS

./: .env.example  .gitignore  ARCHITECTURE.md  PRD.md  docker-compose.yml
.hermes/plans/: 2026-07-22_conceptpokermttpro_integration.md
apps/livepokerops/: Makefile  docker-compose.override.yml
apps/livepokerops/backend/: pyproject.toml  requirements.txt
apps/livepokerops/backend/alembic/versions/: 0001_initial.py  0003_concept_mtt_foundation.py  0004_league_points.py  0005_rsvp.py  0006_attendance.py  0007_finance.py
apps/livepokerops/backend/app/: main.py
apps/livepokerops/backend/app/api/v1/: analytics.py  attendance.py  event_logs.py  finances.py  league.py  players.py  rsvps.py  tournaments.py
apps/livepokerops/backend/app/core/: config.py  logging.py
apps/livepokerops/backend/app/models/: __init__.py  attendance.py  broadcast.py  event_log.py  finance.py  league.py  player.py  rsvp.py  tournament.py
apps/livepokerops/backend/app/schemas/: attendance.py  auth.py  broadcast.py  event_log.py  finance.py  league.py  rsvp.py  tournament.py
apps/livepokerops/backend/app/services/: analytics.py  attendance.py  broadcast.py  event_log.py  finance.py  league.py  rsvp.py  tournament.py
apps/livepokerops/backend/tests/: conftest.py  test_attendance.py  test_broadcast.py  test_finance.py  test_health.py  test_league.py  test_message_provider.py  test_rsvp.py  test_tournament.py
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: health.py  main.py
frontend/: Dockerfile  package.json  tailwind.config.ts
(+30 files in other folders)
